FLUID-1334: removed fixed width, should now stretch to avatar container
svn path=/fluid/components/trunk/; revision=6204

--- a/src/webapp/sample-code/shared/portal/portal.css
+++ b/src/webapp/sample-code/shared/portal/portal.css
@@ -596,7 +596,7 @@ div .orderable-drop-marker{
 
 .orderable-avatar-clone {
   height: auto;
-  width: 400px;
+  /*width: 400px;*/
   filter: alpha(opacity=60);
   opacity: .6;	
 }
